--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Socks</title>
   </head>
   <body>
@@ -12,20 +12,31 @@
 
     <div id="app">
       <div class="product">
-
         <div class="product-image">
-          <img :src='image'/>
+          <img :src="image" />
         </div>
 
         <div class="product-info">
-          <h2>{{ product }}</h2>
-          <a :href='link' target='_blank'>More products like this</a>
-        </div>
+          <h1>{{ product }}</h1>
+          <p v-if="inStock">In Stock</p>
+          <p v-else>Out of Stock</p>
 
+          <ul>
+            <li v-for="detail in details">{{ detail }}</li>
+          </ul>
+
+          <ul>
+            <li v-for="size in sizes">{{ size }}</li>
+          </ul>
+
+          <div v-for="variant in variants" :key="variant.variantId">
+            <p>{{ variant.variantColor }}</p>
+          </div>
+        </div>
       </div>
     </div>
 
- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
